# DeskpetETO

./: .gitattributes  README.md
main-gui/: CardFrame.py  CardFrame_test.py  ClickableElevated.py  ColorPicker.py  CustomCard.py  Document.py  DownloadSegmented.py  DownloadUnzipBox.py  DpiManager.py  DraggableCardWidget.py  FileListSettingCard.py  FilesDropWidget.py  FloatSettingCard.py  GitCard.py  GithubRequest.py  ImageDropWidget.py  JsonMerger.py  MessageBox.py  Setting.py  StateToolTip.py  StorageGroup.py  ToolCalling.py  UI_test.py  UserCard.py  VersionUpdateCard.py  main_window.py  test.py
main-gui/UI_files/: CardFrame.py  CardFrame.ui  untitled.py  untitled.ui  userCard.py  userCard.ui
main-gui/config/: config.json  config.py  setting.py
main-gui/config/QSS/light/: demo.qss  setting.qss
main-gui/config/qss/dark/: demo.qss
main-gui/config/qss/light/: demo.qss
main-gui/preview/: CMakeLists.txt  example.cpp  main.cpp
main-gui/resource/: brands.json  saves.json
p2c-socket/: CMakeLists.txt  gui.py  main.cpp
prts-crawler/: README.md  SimulationTool.py  SpineTest.py  archive.py  brands.json  data.json  main.py  saves.json  test.py
prts_spine/: SimulationTool.py  data.json  main.py  saves.json  test.py
spine-eto-cpp/: CMakeLists.txt  console_colors.h  example_glfw.cpp  image_test.cpp  init.json  main.cpp  menu-test.cpp  mouse_events.cpp  package.json  spine_minimal_test.cpp  spine_win_utils.cpp  spine_win_utils.h  subtitle_test.cpp  text_test.cpp
spine-eto-cpp/dependencies/: SFML-2.6.2.url  mingw64.url
spine-eto-cpp/keyboard-hook/: CMakeLists.txt  keyboard_hook_tool.cpp  keyboard_hook_tool.h  main.cpp  vkCodeToString.cpp  vkCodeToString.h  vk_code_2_string.cpp
spine-eto-cpp/models/amiya/: build_char_1037_amiya3_sale_13.atlas
spine-eto-cpp/models/nymph/: build_char_4146_nymph_epoque_42.atlas
spine-eto-cpp/models/澄闪/spine/喜夜侍者/基建/: build_char_377_gdglow_snow_5.atlas
spine-eto-cpp/models/澄闪/spine/夏卉 FA394/基建/: build_char_377_gdglow_summer_12.atlas
spine-eto-cpp/models/澄闪/spine/花房茶话会/基建/: build_char_377_gdglow_sanrio_1.atlas
spine-eto-cpp/models/澄闪/spine/默认/基建/: build_char_377_gdglow.atlas
spine-eto-cpp/models/铃兰/spine/弃土花开/基建/: build_char_358_lisa_wild_3.atlas
spine-eto-cpp/models/铃兰/spine/春之颂/基建/: build_char_358_lisa_lxh_1.atlas
spine-eto-cpp/models/铃兰/spine/雪霁/基建/: build_char_358_lisa_epoque_22.atlas
spine-eto-cpp/models/铃兰/spine/默认/基建/: build_char_358_lisa.atlas
spine-eto-cpp/spine-eto/: console_colors.h  keyboard_hook_tool.cpp  keyboard_hook_tool.h  menu_model_utils.cpp  menu_model_utils.h  mouse_events.cpp  mouse_events.h  queue_utils.cpp  queue_utils.h  right_click_menu.cpp  right_click_menu.h  spine_animation.cpp  spine_animation.h  spine_win_utils.cpp  spine_win_utils.h  subtitle_window.cpp  subtitle_window.h  vk_code_2_string.cpp  vk_code_2_string.h  window_physics.cpp  window_physics.h
spine-runtimes/spine-glfw/: CMakeLists.txt
spine-runtimes/spine-glfw/example/: main-cpp-lite.cpp  main-eto.cpp  main.cpp  menu-test.cpp
